# Local-LLM-Benchmark-Tool

./: .gitignore  README.md  VERSION  assemble_blueprint.py  backup_model_configs.py  benchmark_config.py  check_agentic.py  compare_models.py  consolidate_results_v11.py  consolidate_results_v12.py  consolidate_results_v13.py  create_humanevalplus_subset.py  csv_writer.py  custom_benchmark_v11.py  custom_benchmark_v12.py  custom_benchmark_v13.py  debug_readiness.py  download_codereval.py  download_real_benchmarks.py  fmt_registry.py  generate_quant_map.py  gguf_full_metadata_reader.py  gguf_moe_full_metadata_reader.py  list_models.py  list_qwen36.py  model-list_02-07-2026.json  model-list_07-07-2026.json  model-list_30-06-2026.json  model_manager.py  pyproject.toml  quick_test.py  quick_test_gptoss.py  registry_tool.py  requirements-dev.txt  rerun_ds1000_mmlu.py  rerun_lmeval.py  resume_ss8.py  run_all_dense.py  run_background.py  run_benchmarks_v11.py  (+9 more)
Doku+Install/: Auswertung Testlauf Qwen-Modelle 30-06-2026.md  Berechnung Stichprobengröße bei Gruppeneinteilung.ods  Bewertung der Benchmark Tests 20-22-06.2026.md  Code-Review_30-06-2026.md  DATASETS_23-06-2026.md  Gedankenspeicher.txt  GitHub-Upload_Anleitung.md  Klassifikation der 57 Fachgebiete aus MMU(-Plus) Benchmark.txt  Konsolidierte_Compaction-Chronik_20260615-20260626.md  LLM Benchmark Doku Runs 14.-15.06.202.txt  MODEL_LIST_20260629.md  Modell_Steckbriefe_20260629.md  Plan - Integration von lm-evaluation-harness + evalplus.md  Planungs-CSVs_Zusammenfassung_15.05.2026.md  install_benchmark-data_windows.ps1  (+7 more)
(+248 files in other folders)
