# Prio 4.15 (Code-Review_2026-07-12.md §4 Prio 4) – minimal config
# for ruff, mypy and pytest.

[project]
# Only the metadata that tools need; runtime dependencies are
# documented in README.md (avoid coupling pyproject to the
# experimental dependency set here).
name = "llm-benchmark-suite"
version = "13.0.0"
description = "Local benchmark framework for LLMs via LM Studio REST API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"
# Don't lint the Archiv/ folder (legacy code)
extend-exclude = ["Archiv", "build", "dist"]

[tool.ruff.lint]
# Lenient default: catch E (errors) and F (pyflakes), ignore style.
# Run `ruff check` in CI; run `ruff format` manually for style.
select = ["E", "F"]
ignore = [
    "E501",  # line-too-long: this is a research codebase with long lines
    "F401",  # unused-import: often used in __init__.py or conditional imports
]

[tool.mypy]
# Lenient settings: legacy research codebase with gradual typing.
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false
warn_redundant_casts = false
